# EXOS-SECURITY

./: Cargo.toml  Dockerfile.api  PROJECT.md  README.md  commit_log.txt  docker-compose.yml  temp.speedx.xxx  temp_commits.txt  updates.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/src/handlers/: mod.rs
crates/api/src/routes/: mobile.rs  mod.rs  projects.rs  reports.rs  scans.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: lib.rs  report.rs
crates/blockchain/src/solidity/: analyzer.rs  mod.rs  parser.rs
crates/blockchain/src/web3/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: api.rs  blockchain.rs  crawl.rs  fuzz.rs  mobile.rs  mod.rs  proxy.rs  redteam.rs  scan.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  error.rs  lib.rs  utils.rs
crates/core/src/models/: finding.rs  mod.rs  project.rs  report.rs  request.rs  scan.rs  vulnerability.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: crawler.rs  lib.rs  parser.rs  scope.rs
crates/fuzzer/: Cargo.toml
crates/fuzzer/src/: fuzzer.rs  lib.rs  wordlists.rs
crates/mobile/: Cargo.toml
crates/mobile/src/: lib.rs
crates/mobile/src/android/: apk_parser.rs  certificate_analyzer.rs  manifest_analyzer.rs  mod.rs  permission_auditor.rs  resource_extractor.rs
crates/mobile/src/common/: mod.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: ca.rs  handler.rs  intercept.rs  lib.rs  main.rs  server.rs  storage.rs  types.rs  upstream.rs  ws.rs
crates/redteam/: Cargo.toml
crates/redteam/src/: lib.rs
crates/redteam/src/planning/: mod.rs
crates/redteam/src/reporting/: format.rs  mod.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: engine.rs  http_client.rs  lib.rs  main.rs  payloads.rs
crates/scanner/src/detectors/: cmdi.rs  cors.rs  headers.rs  mod.rs  open_redirect.rs  path_traversal.rs  sqli.rs  ssrf.rs  ssti.rs  xss.rs  xxe.rs
dashboard/: README.md
dashboard/components/: index.ts
dashboard/components/Marketplace/: PluginBrowser.tsx  PluginDetails.tsx  PluginDeveloper.tsx  PluginInstaller.tsx  PluginSettings.tsx
dashboard/components/charts/: ComplianceRadar.vue  RiskMatrix.vue  TrendAnalysis.vue
dashboard/components/graphs/: AttackPathGraph.vue  AttackSurfaceGraph.vue  NetworkTopology.vue  VulnerabilityHeatmap.vue
dashboard/components/interactive/: CodeEditor.vue  HttpTrafficViewer.vue  PayloadTester.vue
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/projects/: page.tsx
dashboard/src/app/reports/: page.tsx
dashboard/src/app/scans/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/dashboard/: OverviewPanel.tsx
dashboard/src/components/proxy/: TrafficTable.tsx
dashboard/src/components/reports/: ReportCard.tsx
dashboard/src/components/scanner/: ScannerControls.tsx
dashboard/src/components/ui/: Button.tsx  Card.tsx
dashboard/src/lib/: format.ts  mock-data.ts
dashboard/src/types/: index.ts
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
desktop/src/: App.vue  main.js
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: Crawler.vue  Dashboard.vue  Proxy.vue  Reports.vue  Scanner.vue  Settings.vue
desktop/src/components/Mobile/: ApkUpload.vue  MobileHome.vue
docs/getting-started/: configuration.md  first-scan.md  installation.md  quick-start.md
docs/guides/: api-security-testing.md  mobile-app-testing.md  scanning-web-apps.md  smart-contract-audits.md
docs/reference/: api-reference.md  cli-commands.md  vulnerability-types.md
docs/tutorials/: custom-scanner-plugins.md  detecting-xss.md  finding-sql-injection.md  testing-authentication.md
migrations/: 001_init.sql
payloads/cmdi/: unix.txt
payloads/sqli/: blind.txt
payloads/ssti/: templates.txt
payloads/traversal/: unix.txt
payloads/xss/: basic.txt
payloads/xxe/: xml.txt
services/ai/: README.md  requirements.txt
services/ai/api/: main.py
services/oast/: README.md  __init__.py  app.py
services/oast/dns/src/: main.rs
services/oast/http/: __init__.py  server.py
services/oast/smtp/: __init__.py  server.py
services/oast/storage/: __init__.py  store.py
services/oast/webhook/: __init__.py  server.py
