[workspace]
members = [
    "crates/core",
    "crates/proxy",
    "crates/scanner",
    "crates/crawler",
    "crates/fuzzer",
    "crates/mobile",
    "crates/blockchain",
    "crates/redteam",
    "crates/api",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors    = ["Nexus Sentinel Team <team@nexussentinel.io>"]
license    = "AGPL-3.0"
repository = "https://github.com/nexussentinel/nexus-sentinel"

# ─── Shared dependency versions ───────────────────────────────────────────────
[workspace.dependencies]
# Async runtime
tokio       = { version = "1",    features = ["full"] }
tokio-util  = { version = "0.7",  features = ["codec", "io"] }
futures     = "0.3"

# HTTP
hyper       = { version = "0.14", features = ["full"] }
reqwest     = { version = "0.11", features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
http        = "0.2"
url         = { version = "2.5", features = ["serde"] }

# TLS / Crypto
rustls          = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile  = "1"
tokio-rustls    = "0.24"
rcgen           = "0.12"
ring            = "0.17"
sha2            = "0.10"
hmac            = "0.12"
base64          = "0.21"
hex             = "0.4"
rand            = "0.8"
aes-gcm         = "0.10"

# Web framework (API server)
axum        = { version = "0.6", features = ["ws", "multipart", "headers"] }
tower       = { version = "0.4", features = ["full"] }
tower-http  = { version = "0.4", features = ["cors", "trace", "auth", "compression-full"] }

# Database
sqlx    = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis   = { version = "0.23", features = ["tokio-comp", "connection-manager", "json"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
toml        = "0.8"

# Error handling
anyhow      = "1"
thiserror   = "1"

# Logging / Tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Concurrency
parking_lot     = "0.12"
dashmap         = "5"
crossbeam       = "0.8"

# Utilities
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
bytes       = "1"
async-trait = "0.1"
once_cell   = "1"
regex       = "1"
lazy_static = "1"
itertools   = "0.11"
rayon       = "1"
flate2      = "1"

# CLI
clap        = { version = "4", features = ["derive", "color", "env"] }
indicatif   = "0.17"
console     = "0.15"
dialoguer   = "0.11"
colored     = "2"

# Config
config      = "0.13"
dotenvy     = "0.15"

# HTML parsing
scraper     = "0.18"
select       = "0.6"

# HTTPS connector for hyper
hyper-rustls = { version = "0.24", features = ["native-tokio", "http1"] }

# Certificate generation

# Headless sets / concurrent maps (additional)
dashset     = "0.9"

# DNS
trust-dns-resolver = "0.23"

# JWT
jsonwebtoken = "9"

# Template engine (reports)
tera        = "1"

# Case conversion (updated for compatibility)
heck        = "0.5"

# Async channels
tokio-stream        = "0.1"
async-stream        = "0.3"



[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
panic       = "abort"

[profile.dev]
opt-level   = 0
debug       = true
