[package]
name        = "nexus-api"
description = "Nexus Sentinel REST API + WebSocket server"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[[bin]]
name = "nexus-api"
path = "src/main.rs"

[lib]
name = "nexus_api"
path = "src/lib.rs"

[dependencies]
nexus-core    = { path = "../core" }
nexus-scanner = { path = "../scanner" }
nexus-crawler = { path = "../crawler" }
nexus-fuzzer  = { path = "../fuzzer" }

tokio.workspace       = true
futures.workspace     = true
axum.workspace        = true
tower.workspace       = true
tower-http.workspace  = true
hyper.workspace       = true

serde.workspace       = true
serde_json.workspace  = true
serde_yaml.workspace  = true

sqlx.workspace        = true
redis.workspace       = true

anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
tracing-subscriber.workspace = true

uuid.workspace        = true
chrono.workspace      = true
jsonwebtoken.workspace = true
rand.workspace        = true
base64.workspace      = true
sha2.workspace        = true
hex.workspace         = true

async-trait.workspace = true
dashmap.workspace     = true
parking_lot.workspace = true
tokio-stream.workspace = true
once_cell.workspace   = true

config.workspace      = true
dotenvy.workspace     = true
