[package]
name        = "nexus-cli"
description = "Command-line interface for Nexus Sentinel web application security scanner"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-core    = { path = "../core" }
nexus-proxy   = { path = "../proxy" }
nexus-scanner = { path = "../scanner" }
nexus-crawler = { path = "../crawler" }
nexus-fuzzer  = { path = "../fuzzer" }
nexus-api     = { path = "../api" }
nexus-mobile  = { path = "../mobile" }
nexus-blockchain = { path = "../blockchain" }
nexus-redteam    = { path = "../redteam" }

tokio.workspace       = true
clap.workspace        = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
tracing-subscriber.workspace = true
serde.workspace       = true
serde_json.workspace  = true
uuid.workspace        = true
console.workspace     = true
indicatif.workspace   = true
dialoguer.workspace   = true
colored.workspace     = true

# Additional CLI dependencies
crossterm     = "0.27"
unicode-width = "0.1"
