[package]
name        = "nexus-core"
description = "Shared types, models, database layer and configuration for Nexus Sentinel"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[dependencies]
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
serde_yaml.workspace  = true
sqlx.workspace        = true
redis.workspace       = true
uuid.workspace        = true
chrono.workspace      = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
tracing-subscriber.workspace = true
config.workspace      = true
dotenvy.workspace     = true
once_cell.workspace   = true
bytes.workspace       = true
url.workspace         = true
regex.workspace       = true
base64.workspace      = true
sha2.workspace        = true
hex.workspace         = true
rand.workspace        = true
jsonwebtoken.workspace = true
reqwest.workspace     = true
hyper.workspace       = true
rcgen.workspace       = true
rustls.workspace      = true
tokio-rustls.workspace= true
