[package]
name = "nexus-mobile"
description = "Mobile application security analysis for Nexus Sentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
zip = "0.6"
quick-xml = { version = "0.37", features = ["serialize"] }
tempfile = "3"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
