[package]
name        = "nexus-proxy"
description = "HyperProxy Core — MITM proxy engine with TLS interception"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[[bin]]
name = "nexus-proxy"
path = "src/main.rs"

[lib]
name = "nexus_proxy"
path = "src/lib.rs"

[dependencies]
nexus-core = { path = "../core" }

tokio.workspace       = true
tokio-util.workspace  = true
futures.workspace     = true
hyper.workspace       = true
http.workspace        = true
bytes.workspace       = true
url.workspace         = true
rustls.workspace      = true
rustls-pemfile.workspace = true
tokio-rustls.workspace= true
rcgen.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
uuid.workspace        = true
chrono.workspace      = true
dashmap.workspace     = true
parking_lot.workspace = true
base64.workspace      = true
sha2.workspace        = true
hex.workspace         = true
rand.workspace        = true
async-trait.workspace = true
tokio-stream.workspace = true
hyper-rustls.workspace = true
