[package]
name        = "nexus-scanner"
description = "Sentinel Core Scanner — multi-class vulnerability detection engine"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[[bin]]
name = "nexus-scanner"
path = "src/main.rs"

[lib]
name = "nexus_scanner"
path = "src/lib.rs"

[dependencies]
nexus-core = { path = "../core" }

tokio.workspace       = true
futures.workspace     = true
reqwest.workspace     = true
bytes.workspace       = true
url.workspace         = true
http.workspace        = true

serde.workspace       = true
serde_json.workspace  = true

anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true

uuid.workspace        = true
chrono.workspace      = true
rand.workspace        = true
base64.workspace      = true
regex.workspace       = true
sha2.workspace        = true
hex.workspace         = true

async-trait.workspace = true
dashmap.workspace     = true
parking_lot.workspace = true
tokio-stream.workspace = true
